Fix error messages, center tables, and display SDGs in a user readable way

--- a/data_ingestion/styles/styles.css
+++ b/data_ingestion/styles/styles.css
@@ -1,10 +1,3 @@
-.section {
-    padding-top: 30px;
-    padding-right: 0;
-    padding-bottom: 30px;
-    padding-left: 0;
-}
-
 p>code,
 li>code,
 dd>code,
